# yomitan-cli

./: .env.example  .gitignore  README.md  jp_companion.py  pyproject.toml
jp_cli/: __init__.py  cli.py  clipboard.py  commands.py  config.py  deinflect.py  desktop.py  dictionary.py  enrich.py  explain.py  japanese_transforms.json  language_transformer.py  lookup.py  models.py  rendering.py  terminal.py  text.py
jp_cli_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: build_macos_app.sh  build_windows_app.ps1  generate_transforms.mjs
scripts/yomitan/: japanese-transforms.mjs
tests/: test_lookup.py
